<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/col"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_backpack"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/lv_backpack_empty_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="96dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backpack_empty_state_emoticon"
            android:textSize="@dimen/txt_ultra_big"
            android:gravity="center"
            android:textColor="@color/primary_dark"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backpack_empty_state_title"
            android:textSize="@dimen/txt_headline"
            android:gravity="center"
            android:padding="@dimen/base_half_space"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-light"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backpack_empty_state_text"
            android:textSize="@dimen/txt_subheading"
            android:gravity="center"
            android:paddingRight="@dimen/base_full_space"
            android:paddingLeft="@dimen/base_full_space"
            android:textColor="@color/txt_body"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="4dp"/>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>