<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:elevation="@dimen/appbar_elevation">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:layout_scrollFlags="scroll|enterAlways">


            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_cards"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <LinearLayout
            android:id="@+id/lv_add_edit_empty_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="96dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/backpack_empty_state_emoticon"
                android:textSize="@dimen/txt_ultra_big"
                android:gravity="center"
                android:textColor="@color/primary_dark"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_edit_empty_state_title"
                android:textSize="@dimen/txt_headline"
                android:gravity="center"
                android:padding="@dimen/base_half_space"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif-light"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_edit_empty_state_text"
                android:textSize="@dimen/txt_subheading"
                android:gravity="center"
                android:paddingRight="@dimen/base_full_space"
                android:paddingLeft="@dimen/base_full_space"
                android:textColor="@color/txt_body"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="4dp"/>
        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</FrameLayout>

